--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "Icon-System-with-React",
+  "name": "icon-system-with-react",
   "version": "1.0.0",
   "description": "A system for icons systems with React.",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --mode=development --open --hot",
+    "build": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +18,21 @@
   "bugs": {
     "url": "https://github.com/HectorDevx/Icon-System-with-React/issues"
   },
-  "homepage": "https://github.com/HectorDevx/Icon-System-with-React#readme"
+  "homepage": "https://github.com/HectorDevx/Icon-System-with-React#readme",
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.2.2",
+    "html-webpack-plugin": "^4.4.1",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
